--- a/manuscript.tex
+++ b/manuscript.tex
@@ -160,7 +160,27 @@ The growth rates of unstable modes for the case where the pitch-angle cosine val
     \label{fig:2D_imag_zeropitch}
 \end{figure}
 
-Fig. \ref{fig:2D_F12_physicalpitch} plots solutions for the physical pitch-angle case ($u_\parallel = -0.64 u_0$) in the same manner as Fig. \ref{fig:2D_F12_zeropitch}. There are several points worth noting. First, the growth rate is no longer linear with cyclotron harmonic number. Second, harmonics are broader due to the non-zero parallel drift that gives rise to strong Doppler shift with increasing $|k_\parallel|$. Third, doublet splitting of the $10^{th}$ harmonic is observed: see Fig. 2 of Cottrell 1993 for a single signal showing multiple doublet splittings; Fig. 3 of Dendy et al 1994 (also Fig. 9 Dendy et al 1995) shows slices at constant propagation angle that when all superimposed point towards doublet splitting, albeit under-resolved in wavenumber space. The following describes how these three features are connected. The doublet splitting arises due to the dip in growth rate where $k_\parallel$ goes through zero combined with the change in sign of the Doppler shift of the real frequency as $k_\parallel$ changes sign. The effect is exaggerated for higher harmonics where the growth rate diminishes to zero for perpendicular propagation; see e.g. the $12^{th}$ harmonic in Fig. \ref{fig:2D_imag_physicalpitch} near $(k_\parallel \simeq 0\; \Omega_{i}/V_A, k_\bot \simeq 13\; \Omega_{i}/V_A)$, where $\Omega_{i}$ is the ion cyclotron frequency and $V_A$ is the Alfv{\'e}n speed. Other possible mechanisms for doublet splitting could be grad-B or curvature drifts\cite{Cottrell1993}. Qualitatively, Fig. \ref{fig:2D_F12_physicalpitch}(a) resembles Fig. 2 of Cottrell 1993 in that the signal below $\sim 7$ cyclotron harmonics is lower and flatter with well defined peaks and the signal beyond the $7^{th}$ harmonic is a step-change larger and the harmonics are less easily identifiable. These features can only be recreated with a 2D calculation for these distributions functions. Note that Fig. \ref{fig:2D_imag_physicalpitch} shows these two different regimes more clearly. The lower frequency behaviour, where $k_\perp < 7 \Omega_i/V_A$, is characterised by narrow regions of instability near Doppler shifted cyclotron harmonics that are stabilised when $k_\parallel=0$ but unstable at larger negative parallel wavenumbers. The higher frequency behaviour in the region $\omega\geq 7\Omega_i$ is dominated by broader regions of instability in frequency and wavenumber near to Doppler shifted cyclotron harmonics, which have a complex structure in wavenumber space. Modes propagating exactly perpendicular become stable in the region $k_\perp > 13 \Omega_i/V_A$ whilst obliquely propagating modes remain unstable; see Fig. 9 of Dendy et al 1995, which plots the analytic expression for the growth rate of the magnetoacoustic cylcotron instability, i.e. the instability thought responsible for ICE, at 5 slices of propagation angle. The Doppler shift of the growing modes can reach $\approx \Omega_i$ for large propagation angles at lower frequencies and also for moderately oblique angles at higher frequencies; see, for example, the mode associated with the $15^{th}$ cyclotron harmonic at, $(k_\parallel \simeq -\frac{3}{4} \Omega_i/V_A, k_\perp \simeq 14 \Omega_i/V_A$, i.e. a propagation angle of $93^\circ$). Furthermore, the breadth of the harmonics can be attributed to the contributions from multiple propagation angles even though the lower harmonics are stable for forward travelling and perpendicular propagation angles.
+Fig. \ref{fig:2D_F12_physicalpitch} plots solutions for the physical pitch-angle
+case ($u_\parallel = -0.64 u_0$) in the same manner as Fig.
+\ref{fig:2D_F12_zeropitch}. There are several points worth noting. First, the
+growth rate is no longer linear with cyclotron harmonic number. Second,
+harmonics are broader due to the non-zero parallel drift that gives rise to
+strong Doppler shift with increasing $|k_\parallel|$. Third, doublet splitting
+of the $10^{th}$ harmonic is observed: see Fig. 2 of Cottrell 1993 for a single
+signal showing multiple doublet splittings; Fig. 3 of Dendy et al 1994 (also
+Fig. 9 Dendy et al 1995) shows slices at constant propagation angle that when
+all superimposed point towards doublet splitting, albeit under-resolved in
+wavenumber space. The following describes how these three features are
+connected. The doublet splitting arises due to the dip in growth rate where
+$k_\parallel$ goes through zero combined with the change in sign of the Doppler
+shift of the real frequency as $k_\parallel$ changes sign. The effect is
+exaggerated for higher harmonics where the growth rate diminishes to zero for
+perpendicular propagation; see e.g. the $12^{th}$ harmonic in Fig.
+\ref{fig:2D_imag_physicalpitch} near $(k_\parallel \simeq 0\; \Omega_{i}/V_A,
+k_\bot \simeq 13\; \Omega_{i}/V_A)$, where $\Omega_{i}$ is the ion cyclotron
+frequency and $V_A$ is the Alfv{\'e}n speed. Other possible mechanisms for
+doublet splitting could be grad-B or curvature
+drifts\cite{Cottrell1993,Fulop1998}. Qualitatively, Fig. \ref{fig:2D_F12_physicalpitch}(a) resembles Fig. 2 of Cottrell 1993 in that the signal below $\sim 7$ cyclotron harmonics is lower and flatter with well defined peaks and the signal beyond the $7^{th}$ harmonic is a step-change larger and the harmonics are less easily identifiable. These features can only be recreated with a 2D calculation for these distributions functions. Note that Fig. \ref{fig:2D_imag_physicalpitch} shows these two different regimes more clearly. The lower frequency behaviour, where $k_\perp < 7 \Omega_i/V_A$, is characterised by narrow regions of instability near Doppler shifted cyclotron harmonics that are stabilised when $k_\parallel=0$ but unstable at larger negative parallel wavenumbers. The higher frequency behaviour in the region $\omega\geq 7\Omega_i$ is dominated by broader regions of instability in frequency and wavenumber near to Doppler shifted cyclotron harmonics, which have a complex structure in wavenumber space. Modes propagating exactly perpendicular become stable in the region $k_\perp > 13 \Omega_i/V_A$ whilst obliquely propagating modes remain unstable; see Fig. 9 of Dendy et al 1995, which plots the analytic expression for the growth rate of the magnetoacoustic cylcotron instability, i.e. the instability thought responsible for ICE, at 5 slices of propagation angle. The Doppler shift of the growing modes can reach $\approx \Omega_i$ for large propagation angles at lower frequencies and also for moderately oblique angles at higher frequencies; see, for example, the mode associated with the $15^{th}$ cyclotron harmonic at, $(k_\parallel \simeq -\frac{3}{4} \Omega_i/V_A, k_\perp \simeq 14 \Omega_i/V_A$, i.e. a propagation angle of $93^\circ$). Furthermore, the breadth of the harmonics can be attributed to the contributions from multiple propagation angles even though the lower harmonics are stable for forward travelling and perpendicular propagation angles.
 
 \begin{figure}[ht!]
     % \centering
@@ -183,7 +203,7 @@ Fig. \ref{fig:2D_F12_physicalpitch} plots solutions for the physical pitch-angle
     % \centering
     \raggedleft
 \includegraphics[scale=0.9]{fig5.pdf}
-    \caption{(colour online) As in Fig. \ref{fig:2D_imag_zeropitch}, except that the shading indicates the real part of the smoothed solution normalised by the high frequency expression for the fast Alfv{\'e}n wave set out by Eq. 25 of Ref. \cite{Dendy1994}, which is also Eq. 11 in Ref. \cite{McClements1996}. The differences in real frequency for the two sets of calculations, physical pitch-angle cosine of $-0.64$ and zero pitch, are negligible.}
+    \caption{(colour online) As in Fig. \ref{fig:2D_imag_zeropitch}, except that the shading indicates the real part of the smoothed solution normalised by the high frequency expression for the fast Alfv{\'e}n wave set out by Eq. 25 of Ref. \cite{Dendy1994}, which is also Eq. 11 in Ref. \cite{McClements1996}. The differences in real frequency for the two sets of calculations, physical pitch-angle cosine of $-0.64$ and zero, are negligible.}
     \label{fig:2D_real_zeropitch}
 \end{figure}
 
@@ -376,8 +396,8 @@ Johnson S G \textit{QuadGK.jl: Gauss-Kronrod integration in Julia} https://githu
 Nelder J A and Mead R 1965 \textit{Computer Journal} \textbf{7} 4
 % , A simplex method for function minimization,
 
-% \bibitem{Brambilla}
-% M. Brambilla, Kinetic Theory of Plasma Waves: Homogeneous Plasmas (International Series of Monographs on Physics (96))
+\bibitem{Fulop1998}
+F{\"u}l{\"o}p T and Lisak M 1998 \textit{Nucl. Fusion} \textbf{38} 761
 
 \bibitem{Fried1961}
 Fried B D and Conte S C 1961 \textit{The Plasma Dispersion Function} (Academic Press, New York)
